--- a/python/src/tox.ini
+++ b/python/src/tox.ini
@@ -12,7 +12,8 @@ skipsdist = True
 passenv = TOXENV
 
 setenv =
-    OTEL_CONSOLE_EXPORTER = True
+    OTEL_PYTHON_TRACER_PROVIDER=sdk_tracer_provider
+    OTEL_TRACES_EXPORTER="console_span"
 
 install_command = pip install {opts} {packages}
 
