--- a/python/src/otel/otel_sdk/requirements-nodeps.txt
+++ b/python/src/otel/otel_sdk/requirements-nodeps.txt
@@ -1,27 +1,27 @@
-opentelemetry-instrumentation-aiohttp-client
-opentelemetry-instrumentation-asgi
-opentelemetry-instrumentation-asyncpg
-opentelemetry-instrumentation-boto
-opentelemetry-instrumentation-botocore
-opentelemetry-instrumentation-celery
-opentelemetry-instrumentation-dbapi
-opentelemetry-instrumentation-django
-opentelemetry-instrumentation-elasticsearch
-opentelemetry-instrumentation-fastapi
-opentelemetry-instrumentation-falcon
-opentelemetry-instrumentation-flask
-opentelemetry-instrumentation-grpc
-opentelemetry-instrumentation-jinja2
-opentelemetry-instrumentation-mysql
-opentelemetry-instrumentation-psycopg2
-opentelemetry-instrumentation-pymemcache
-opentelemetry-instrumentation-pymongo
-opentelemetry-instrumentation-pymysql
-opentelemetry-instrumentation-pyramid
-opentelemetry-instrumentation-redis
-opentelemetry-instrumentation-requests
-opentelemetry-instrumentation-sqlalchemy
-opentelemetry-instrumentation-sqlite3
-opentelemetry-instrumentation-starlette
-opentelemetry-instrumentation-tornado
-opentelemetry-instrumentation-wsgi
+opentelemetry-instrumentation-aiohttp-client==0.18b1
+opentelemetry-instrumentation-asgi==0.18b1
+opentelemetry-instrumentation-asyncpg==0.18b1
+opentelemetry-instrumentation-boto==0.18b1
+opentelemetry-instrumentation-botocore==0.18b1
+opentelemetry-instrumentation-celery==0.18b1
+opentelemetry-instrumentation-dbapi==0.18b1
+opentelemetry-instrumentation-django==0.18b1
+opentelemetry-instrumentation-elasticsearch==0.18b1
+opentelemetry-instrumentation-fastapi==0.18b1
+opentelemetry-instrumentation-falcon==0.18b1
+opentelemetry-instrumentation-flask==0.18b1
+opentelemetry-instrumentation-grpc==0.18b1
+opentelemetry-instrumentation-jinja2==0.18b1
+opentelemetry-instrumentation-mysql==0.18b1
+opentelemetry-instrumentation-psycopg2==0.18b1
+opentelemetry-instrumentation-pymemcache==0.18b1
+opentelemetry-instrumentation-pymongo==0.18b1
+opentelemetry-instrumentation-pymysql==0.18b1
+opentelemetry-instrumentation-pyramid==0.18b1
+opentelemetry-instrumentation-redis==0.18b1
+opentelemetry-instrumentation-requests==0.18b1
+opentelemetry-instrumentation-sqlalchemy==0.18b1
+opentelemetry-instrumentation-sqlite3==0.18b1
+opentelemetry-instrumentation-starlette==0.18b1
+opentelemetry-instrumentation-tornado==0.18b1
+opentelemetry-instrumentation-wsgi==0.18b1
