Use collector extension in nodejs sample app.

--- a/collector/config.yaml
+++ b/collector/config.yaml
@@ -2,9 +2,11 @@ receivers:
   otlp:
     protocols:
       grpc:
+      http:
 
 exporters:
   logging:
+    loglevel: debug
 
 service:
   pipelines:
