--- a/python/src/template.yml
+++ b/python/src/template.yml
@@ -1,14 +1,48 @@
 AWSTemplateFormatVersion: '2010-09-09'
 Transform: 'AWS::Serverless-2016-10-31'
 Description: OpenTelemetry Python Lambda layer for Python 3.8 Runtime
+Parameters:
+  LayerName:
+    Type: String
+    Description: Lambda layer name to be published
+    Default: opentelemetry-python-38
 Resources:
   OTelLayer:
     Type: AWS::Serverless::LayerVersion
     Properties:
-      LayerName: opentelemetry-python-38
+      LayerName: !Ref LayerName
       Description: Opentelemetry Python38 layer
       ContentUri: ./otel
       CompatibleRuntimes:
         - python3.8
     Metadata:
       BuildMethod: makefile
+  api:
+    Type: AWS::Serverless::Api
+    Properties:
+      StageName: api
+      OpenApiVersion: 3.0.2
+  function:
+    Type: AWS::Serverless::Function
+    Properties:
+      Handler: lambda_function.lambda_handler
+      Runtime: python3.8
+      CodeUri: ./function
+      Description: Build OTel Python Lambda layer and sample app from scratch
+      MemorySize: 512
+      Timeout: 15
+      Policies:
+        - AmazonS3ReadOnlyAccess
+      Environment:
+        Variables:
+          AWS_LAMBDA_EXEC_WRAPPER: /opt/python/otel-instrument
+      Tracing: Active
+      Layers:
+        - !Ref OTelLayer
+      Events:
+        getEndpoint:
+          Type: Api
+          Properties:
+            RestApiId: !Ref api
+            Path: /
+            Method: GET
