Register all nodejs instrumentation

--- a/nodejs/packages/layer/package.json
+++ b/nodejs/packages/layer/package.json
@@ -30,6 +30,20 @@
     "@opentelemetry/exporter-collector-proto": "^0.18.2",
     "@opentelemetry/instrumentation": "^0.18.2",
     "@opentelemetry/instrumentation-aws-lambda": "https://gitpkg.now.sh/anuraaga/opentelemetry-js-contrib/plugins/node/opentelemetry-instrumentation-aws-lambda?2f43915dd94f21a4daf54632db2c12c1ca597a6d",
+    "@opentelemetry/instrumentation-dns": "^0.15.0",
+    "@opentelemetry/instrumentation-express": "^0.15.0",
+    "@opentelemetry/instrumentation-fetch": "^0.18.2",
+    "@opentelemetry/instrumentation-graphql": "^0.15.0",
+    "@opentelemetry/instrumentation-grpc": "^0.18.2",
+    "@opentelemetry/instrumentation-hapi": "^0.15.0",
+    "@opentelemetry/instrumentation-http": "^0.18.2",
+    "@opentelemetry/instrumentation-ioredis": "^0.15.0",
+    "@opentelemetry/instrumentation-koa": "^0.15.0",
+    "@opentelemetry/instrumentation-mongodb": "^0.15.0",
+    "@opentelemetry/instrumentation-mysql": "^0.15.0",
+    "@opentelemetry/instrumentation-net": "^0.15.0",
+    "@opentelemetry/instrumentation-pg": "^0.15.0",
+    "@opentelemetry/instrumentation-redis": "^0.15.0",
     "@opentelemetry/propagator-aws-xray": "https://gitpkg.now.sh/anuraaga/opentelemetry-js-contrib/propagators/opentelemetry-propagator-aws-xray?98cb56db4623222873bc02caffb3bc5a646d61a2",
     "@opentelemetry/resource-detector-aws": "https://gitpkg.now.sh/anuraaga/opentelemetry-js/packages/opentelemetry-resource-detector-aws?ff1afb2bc6e10c6db4016dc54b1548c951df3807",
     "@opentelemetry/node": "^0.18.2",
