--- a/nodejs/packages/layer/package.json
+++ b/nodejs/packages/layer/package.json
@@ -26,28 +26,28 @@
     "node": ">=10.0.0"
   },
   "dependencies": {
-    "@opentelemetry/api": "^1.0.0-rc.0",
-    "@opentelemetry/exporter-collector-proto": "^0.18.2",
-    "@opentelemetry/instrumentation": "^0.18.2",
-    "@opentelemetry/instrumentation-aws-lambda": "https://gitpkg.now.sh/anuraaga/opentelemetry-js-contrib/plugins/node/opentelemetry-instrumentation-aws-lambda?2f43915dd94f21a4daf54632db2c12c1ca597a6d",
-    "@opentelemetry/instrumentation-dns": "^0.15.0",
-    "@opentelemetry/instrumentation-express": "^0.15.0",
-    "@opentelemetry/instrumentation-graphql": "^0.15.0",
-    "@opentelemetry/instrumentation-grpc": "^0.18.2",
-    "@opentelemetry/instrumentation-hapi": "^0.15.0",
-    "@opentelemetry/instrumentation-http": "^0.18.2",
-    "@opentelemetry/instrumentation-ioredis": "^0.15.0",
-    "@opentelemetry/instrumentation-koa": "^0.15.0",
-    "@opentelemetry/instrumentation-mongodb": "^0.15.0",
-    "@opentelemetry/instrumentation-mysql": "^0.15.0",
-    "@opentelemetry/instrumentation-net": "^0.15.0",
-    "@opentelemetry/instrumentation-pg": "^0.15.0",
-    "@opentelemetry/instrumentation-redis": "^0.15.0",
-    "@opentelemetry/propagator-aws-xray": "https://gitpkg.now.sh/anuraaga/opentelemetry-js-contrib/propagators/opentelemetry-propagator-aws-xray?98cb56db4623222873bc02caffb3bc5a646d61a2",
-    "@opentelemetry/resource-detector-aws": "https://gitpkg.now.sh/anuraaga/opentelemetry-js/packages/opentelemetry-resource-detector-aws?ff1afb2bc6e10c6db4016dc54b1548c951df3807",
-    "@opentelemetry/node": "^0.18.2",
-    "@opentelemetry/resources": "^0.18.2",
-    "@opentelemetry/tracing": "^0.18.2",
+    "@opentelemetry/api": "1.0.0-rc.0",
+    "@opentelemetry/exporter-collector-proto": "^0.19.0",
+    "@opentelemetry/instrumentation": "^0.19.0",
+    "@opentelemetry/instrumentation-aws-lambda": "https://gitpkg.now.sh/anuraaga/opentelemetry-js-contrib/plugins/node/opentelemetry-instrumentation-aws-lambda?515bfc745f243115ea1820d20f137438d606a5eb",
+    "@opentelemetry/instrumentation-dns": "^0.16.0",
+    "@opentelemetry/instrumentation-express": "^0.16.0",
+    "@opentelemetry/instrumentation-graphql": "^0.16.0",
+    "@opentelemetry/instrumentation-grpc": "^0.19.0",
+    "@opentelemetry/instrumentation-hapi": "^0.16.0",
+    "@opentelemetry/instrumentation-http": "^0.19.0",
+    "@opentelemetry/instrumentation-ioredis": "^0.16.0",
+    "@opentelemetry/instrumentation-koa": "^0.16.0",
+    "@opentelemetry/instrumentation-mongodb": "^0.16.0",
+    "@opentelemetry/instrumentation-mysql": "^0.16.0",
+    "@opentelemetry/instrumentation-net": "^0.16.0",
+    "@opentelemetry/instrumentation-pg": "^0.16.0",
+    "@opentelemetry/instrumentation-redis": "^0.16.0",
+    "@opentelemetry/node": "^0.19.0",
+    "@opentelemetry/propagator-aws-xray": "^0.16.0",
+    "@opentelemetry/resource-detector-aws": "^0.19.0",
+    "@opentelemetry/resources": "^0.19.0",
+    "@opentelemetry/tracing": "^0.19.0",
     "opentelemetry-instrumentation-aws-sdk": "^0.3.0"
   }
 }
