--- a/python/src/otel/otel_sdk/requirements-nodeps.txt
+++ b/python/src/otel/otel_sdk/requirements-nodeps.txt
@@ -1,4 +1,6 @@
 opentelemetry-instrumentation-aiohttp-client==0.24b0
+opentelemetry-util-http==0.24b0
+asgiref~=3.0
 opentelemetry-instrumentation-asgi==0.24b0
 opentelemetry-instrumentation-asyncpg==0.24b0
 opentelemetry-instrumentation-boto==0.24b0
