--- a/python/src/otel/otel_sdk/requirements.txt
+++ b/python/src/otel/otel_sdk/requirements.txt
@@ -3,4 +3,4 @@ opentelemetry-sdk==1.5.0
 opentelemetry-exporter-otlp==1.5.0
 opentelemetry-distro==0.24b0
 opentelemetry-instrumentation==0.24b0
-opentelemetry-sdk-extension-aws==0.24b0
+opentelemetry-sdk-extension-aws==1.0.1
