Format tests to match upstream format

--- a/python/src/tox.ini
+++ b/python/src/tox.ini
@@ -1,6 +1,7 @@
 [tox]
 envlist =
-    py3{8}
+    ; opentelemetry-instrumentation-aws_lambda
+    py3{8,9}-test-instrumentation-aws_lambda
 
 minversion = 3.8
 
@@ -14,11 +15,21 @@ passenv = TOXENV
 setenv =
     OTEL_PYTHON_TRACER_PROVIDER=sdk_tracer_provider
     OTEL_TRACES_EXPORTER="console_span"
+    ; override CORE_REPO_SHA via env variable when testing other branches/commits than main
+    ; i.e: CORE_REPO_SHA=dde62cebffe519c35875af6d06fae053b3be65ec tox -e <env to test>
+    CORE_REPO_SHA={env:CORE_REPO_SHA:main}
+    CORE_REPO="git+https://github.com/open-telemetry/opentelemetry-python.git@{env:CORE_REPO_SHA}"
 
-install_command = pip install {opts} {packages}
+changedir =
+    test-instrumentation-aws_lambda: {toxinidir}/otel/tests
+
+commands_pre =
+    test: pip install "opentelemetry-test[test] @ {env:CORE_REPO}#egg=opentelemetry-test&subdirectory=tests/util"
+
+    aws_lambda: pip install {toxinidir}/otel[test]
 
 deps = 
-    -r{toxinidir}/otel/tests/test-requirements.txt
+    test: pytest
 
 commands =
-    pytest {toxinidir}/otel/tests/ -s
+    test: pytest {posargs} -s
