--- a/python/src/otel/otel_sdk/requirements.txt
+++ b/python/src/otel/otel_sdk/requirements.txt
@@ -1,3 +1,4 @@
 opentelemetry-exporter-otlp==1.5.0
 opentelemetry-distro==0.24b0
 opentelemetry-sdk-extension-aws==1.0.1
+opentelemetry-instrumentation==0.24b0
