Update testing file to use bash script

--- a/python/src/otel/setup.cfg
+++ b/python/src/otel/setup.cfg
@@ -50,5 +50,7 @@ test =
 where = otel_sdk
 
 [options.entry_points]
-opentelemetry_instrumentor =
-    aws_lambda = opentelemetry.instrumentation.aws_lambda:AwsLambdaInstrumentor
+# NOTE: (NathanielRN) DO NOT add AwsLambdaInstrumentor entry point because
+# current AWS Lambda implementation reloads a fresh import of the user's Lambda
+# handler. Auto Instrumentation runs _before_ and if it instruments the handler
+# that patching will be lost.
