--- a/python/src/tox.ini
+++ b/python/src/tox.ini
@@ -1,7 +1,7 @@
 [tox]
 envlist =
-    ; opentelemetry-instrumentation-aws_lambda
-    py3{8,9}-test-instrumentation-aws_lambda
+    ; opentelemetry-instrumentation-aws-lambda
+    py3{8,9}-test-instrumentation-aws-lambda
 
 minversion = 3.8
 
@@ -15,17 +15,17 @@ passenv = TOXENV
 setenv =
     OTEL_PYTHON_TRACER_PROVIDER=sdk_tracer_provider
     ; override CORE_REPO_SHA via env variable when testing other branches/commits than main
-    ; i.e: CORE_REPO_SHA=dde62cebffe519c35875af6d06fae053b3be65ec tox -e <env to test>
+    ; i.e: CORE_REPO_SHA=<YOUR_COMMIT_SHA> tox -e test-instrumentation-aws-lambda
     CORE_REPO_SHA={env:CORE_REPO_SHA:main}
     CORE_REPO="git+https://github.com/open-telemetry/opentelemetry-python.git@{env:CORE_REPO_SHA}"
 
 changedir =
-    test-instrumentation-aws_lambda: {toxinidir}/otel/tests
+    test-instrumentation-aws-lambda: {toxinidir}/otel/tests
 
 commands_pre =
     test: pip install "opentelemetry-test[test] @ {env:CORE_REPO}#egg=opentelemetry-test&subdirectory=tests/util"
 
-    aws_lambda: pip install {toxinidir}/otel[test]
+    aws-lambda: pip install {toxinidir}/otel[test]
 
 deps = 
     test: pytest
