--- a/nodejs/packages/layer/package.json
+++ b/nodejs/packages/layer/package.json
@@ -26,7 +26,7 @@
     "node": ">=10.0.0"
   },
   "dependencies": {
-    "@opentelemetry/api": "~1.0.3",
+    "@opentelemetry/api": "^1.0.3",
     "@opentelemetry/exporter-otlp-proto": "^0.26.0",
     "@opentelemetry/instrumentation": "^0.26.0",
     "@opentelemetry/instrumentation-aws-lambda": "^0.27.0",
@@ -44,10 +44,10 @@
     "@opentelemetry/instrumentation-net": "^0.26.0",
     "@opentelemetry/instrumentation-pg": "^0.26.0",
     "@opentelemetry/instrumentation-redis": "^0.26.0",
-    "@opentelemetry/propagator-aws-xray": "~1.0.0",
-    "@opentelemetry/resource-detector-aws": "~1.0.0",
-    "@opentelemetry/resources": "~1.0.0",
-    "@opentelemetry/sdk-trace-base": "~1.0.0",
-    "@opentelemetry/sdk-trace-node": "~1.0.0"
+    "@opentelemetry/propagator-aws-xray": "^1.0.0",
+    "@opentelemetry/resource-detector-aws": "^1.0.0",
+    "@opentelemetry/resources": "^1.0.0",
+    "@opentelemetry/sdk-trace-base": "^1.0.0",
+    "@opentelemetry/sdk-trace-node": "^1.0.0"
   }
 }
