--- a/python/src/tox.ini
+++ b/python/src/tox.ini
@@ -23,11 +23,11 @@ changedir =
     test-instrumentation-aws-lambda: {toxinidir}/otel/tests
 
 commands_pre =
-    test: pip install "opentelemetry-test[test] @ {env:CORE_REPO}#egg=opentelemetry-test&subdirectory=tests/util"
+    test: pip install "opentelemetry-test-utils @ {env:CORE_REPO}#egg=opentelemetry-test-utils&subdirectory=tests/opentelemetry-test-utils"
 
-    aws-lambda: pip install {toxinidir}/otel[test]
+    aws-lambda: pip install opentelemetry-instrumentation-aws-lambda
 
-deps = 
+deps =
     test: pytest
 
 commands =
