Build collector before we use SAM Docker Container * The recent v0.39.0 collector introduced a change that required go 1.17 * We can't download go 1.17 in the Docker Container used by SAM * We build the collector outside the Docker Container and just copy over later

--- a/python/src/otel/Makefile
+++ b/python/src/otel/Makefile
@@ -1,13 +1,5 @@
-export AOC=$(shell pwd)/otel_collector
+export AOC_BUILD_DIR=$(shell pwd)/collector_build
 export SDK=$(shell pwd)/otel_sdk
-
-VERSION=$(shell cat $(AOC)/VERSION)
-GIT_SHA=$(shell git rev-parse HEAD)
-GOBUILD=GO111MODULE=on CGO_ENABLED=0 installsuffix=cgo go build -trimpath
-BUILD_INFO_IMPORT_PATH=main
-
-LDFLAGS=-ldflags "-s -w -X $(BUILD_INFO_IMPORT_PATH).GitHash=$(GIT_SHA) -X $(BUILD_INFO_IMPORT_PATH).Version=$(VERSION) \
--X github.com/open-telemetry/opentelemetry-collector-contrib/exporter/awsxrayexporter.collectorDistribution=aws-otel-collector-lambda"
 
 build-OTelLayer:
 	mkdir -p $(ARTIFACTS_DIR)/python
@@ -20,9 +12,4 @@ build-OTelLayer:
 	rm -rf $(ARTIFACTS_DIR)/python/boto*
 	rm -rf $(ARTIFACTS_DIR)/python/urllib3*
 
-	rpm --rebuilddb
-	yum install -y go
-	mkdir -p $(ARTIFACTS_DIR)/extensions
-	cd $(AOC) && $(GOBUILD) $(LDFLAGS) -o $(ARTIFACTS_DIR)/extensions/collector .
-	mkdir -p $(ARTIFACTS_DIR)/collector-config
-	cp $(AOC)/config* $(ARTIFACTS_DIR)/collector-config/
+	cp -r $(AOC_BUILD_DIR)/* $(ARTIFACTS_DIR)/
