--- a/.github/workflows/pr-python.yml
+++ b/.github/workflows/pr-python.yml
@@ -22,7 +22,7 @@ jobs:
     steps:
       - name: Checkout this repo
         uses: actions/checkout@v2
-      - name: Setup Python
+      - name: Setup Python for OTel Python SDK
         uses: actions/setup-python@v2
         with:
           python-version: ${{ matrix.python }}
@@ -31,7 +31,10 @@ jobs:
         run: |
           pip install tox
           tox
-      - name: Build layer
+      - name: Set up Go for ADOT Collector
+        uses: actions/setup-go@v2
+        with:
+          go-version: '^1.17'
+      - name: Build Python Layer which includes ADOT Collector
         working-directory: python/src
         run: ./run.sh -b
-
