Use Makefile operator to get GOARCH default * Fix bash syntax default for ENV var by using Makefile var syntax * Modify the Collector CI test to validate the binary architecture

--- a/.github/workflows/ci-collector.yml
+++ b/.github/workflows/ci-collector.yml
@@ -34,3 +34,16 @@ jobs:
       - name: Build Collector Executable for ${{ matrix.architecture }} architecture
         run: GOARCH=${{ matrix.architecture }} make package
         working-directory: collector
+      - name: Confirm architecture of built collector
+        working-directory: collector/build/extensions
+        run: |
+          if [ "${{ matrix.architecture }}" = "amd64" ]
+          then
+            SEARCH_STRING=x86
+          elif [ "${{ matrix.architecture }}" = "arm64" ]
+          then
+            SEARCH_STRING=ARM
+          else
+            exit 2
+          fi
+          grep "$SEARCH_STRING" <<< "$(file collector)"
