--- a/python/src/tox.ini
+++ b/python/src/tox.ini
@@ -1,7 +1,7 @@
 [tox]
 envlist =
     ; opentelemetry-instrumentation-aws-lambda
-    python3.{8,9}-test-instrumentation-aws-lambda
+    py3{8,9}-test-instrumentation-aws-lambda
 
 minversion = 3.8
 
