Add support for Python 3.9 Layers (#218)

--- a/.github/workflows/pr-python.yml
+++ b/.github/workflows/pr-python.yml
@@ -17,7 +17,7 @@ jobs:
 
     strategy:
       matrix:
-        python: [3.8]
+        python: [3.8, 3.9]
 
     steps:
       - name: Checkout this repo
