--- a/.github/workflows/pr-python.yml
+++ b/.github/workflows/pr-python.yml
@@ -25,6 +25,10 @@ jobs:
         uses: actions/setup-python@v2
         with:
           python-version: ${{ matrix.python }}
+      - name: Setup Python for OTel Python SDK
+        uses: JesseTG/rm@v1.0.2
+        with:
+          path: /home/runner/work/opentelemetry-lambda/opentelemetry-lambda/python/src/.tox/     
       - name: Install tox testing package
         working-directory: python/src
         run: |
