--- a/python/sample-apps/template.yml
+++ b/python/sample-apps/template.yml
@@ -12,19 +12,26 @@ Resources:
     Type: AWS::Serverless::Function
     Properties:
       Handler: lambda_function.lambda_handler
-      Runtime: python3.9
+      Runtime: python3.7
       CodeUri: ./function
       Description: Build OTel Python Lambda Sample from scratch
       MemorySize: 512
-      Timeout: 15
+      Timeout: 310
       Policies:
         - AWSLambdaBasicExecutionRole
         - AWSLambda_ReadOnlyAccess
         - AWSXrayWriteOnlyAccess
         - AmazonS3FullAccess
+        - Statement:
+          - Sid: AMPRemoteWrite
+            Effect: Allow
+            Action:
+            - aps:RemoteWrite
+            Resource: '*'
       Environment:
         Variables:
           AWS_LAMBDA_EXEC_WRAPPER: /opt/python/otel-instrument
+          PROTOCOL_BUFFERS_PYTHON_IMPLEMENTATION: python  # needed because https://github.com/open-telemetry/opentelemetry-python/issues/2717 / when new release of library is released this should be solved and can be removed 
       Tracing: Active
       Layers:
         - !Ref OTelLayer
