--- a/python/src/otel/otel_sdk/requirements.txt
+++ b/python/src/otel/otel_sdk/requirements.txt
@@ -1,3 +1,4 @@
 opentelemetry-exporter-otlp-proto-http==1.12.0
 opentelemetry-distro==0.33b0
 opentelemetry-instrumentation-aws-lambda==0.33b0
+protobuf==3.20.1
