--- a/nodejs/packages/layer/package.json
+++ b/nodejs/packages/layer/package.json
@@ -27,28 +27,28 @@
   },
   "dependencies": {
     "@opentelemetry/api": "^1.2.0",
-    "@opentelemetry/exporter-trace-otlp-proto": "^0.32.0",
-    "@opentelemetry/exporter-metrics-otlp-proto": "^0.32.0",
-    "@opentelemetry/instrumentation": "^0.32.0",
-    "@opentelemetry/instrumentation-aws-lambda": "^0.32.0",
-    "@opentelemetry/instrumentation-aws-sdk": "^0.8.1",
-    "@opentelemetry/instrumentation-dns": "^0.29.0",
-    "@opentelemetry/instrumentation-express": "^0.30.0",
-    "@opentelemetry/instrumentation-graphql": "^0.29.0",
-    "@opentelemetry/instrumentation-grpc": "^0.32.0",
-    "@opentelemetry/instrumentation-hapi": "^0.29.0",
-    "@opentelemetry/instrumentation-http": "^0.32.0",
-    "@opentelemetry/instrumentation-ioredis": "^0.31.0",
-    "@opentelemetry/instrumentation-koa": "^0.31.0",
-    "@opentelemetry/instrumentation-mongodb": "^0.31.1",
-    "@opentelemetry/instrumentation-mysql": "^0.30.0",
-    "@opentelemetry/instrumentation-net": "^0.29.0",
-    "@opentelemetry/instrumentation-pg": "^0.30.0",
-    "@opentelemetry/instrumentation-redis": "^0.32.0",
+    "@opentelemetry/exporter-trace-otlp-proto": "^0.33.0",
+    "@opentelemetry/exporter-metrics-otlp-proto": "^0.33.0",
+    "@opentelemetry/instrumentation": "^0.33.0",
+    "@opentelemetry/instrumentation-aws-lambda": "^0.33.0",
+    "@opentelemetry/instrumentation-aws-sdk": "^0.9.1",
+    "@opentelemetry/instrumentation-dns": "^0.30.0",
+    "@opentelemetry/instrumentation-express": "^0.31.1",
+    "@opentelemetry/instrumentation-graphql": "^0.31.0",
+    "@opentelemetry/instrumentation-grpc": "^0.33.0",
+    "@opentelemetry/instrumentation-hapi": "0.30.0",
+    "@opentelemetry/instrumentation-http": "^0.33.0",
+    "@opentelemetry/instrumentation-ioredis": "^0.32.1",
+    "@opentelemetry/instrumentation-koa": "^0.32.0",
+    "@opentelemetry/instrumentation-mongodb": "^0.32.0",
+    "@opentelemetry/instrumentation-mysql": "^0.31.1",
+    "@opentelemetry/instrumentation-net": "^0.30.1",
+    "@opentelemetry/instrumentation-pg": "^0.31.1",
+    "@opentelemetry/instrumentation-redis": "^0.33.0",
     "@opentelemetry/propagator-aws-xray": "^1.1.0",
-    "@opentelemetry/resource-detector-aws": "^1.1.1",
-    "@opentelemetry/resources": "^1.6.0",
-    "@opentelemetry/sdk-trace-base": "^1.6.0",
-    "@opentelemetry/sdk-trace-node": "^1.6.0"
+    "@opentelemetry/resource-detector-aws": "^1.1.2",
+    "@opentelemetry/resources": "^1.7.0",
+    "@opentelemetry/sdk-trace-base": "^1.7.0",
+    "@opentelemetry/sdk-trace-node": "^1.7.0"
   }
 }
