--- a/.github/workflows/ci-java.yml
+++ b/.github/workflows/ci-java.yml
@@ -19,7 +19,8 @@ jobs:
       - uses: actions/checkout@v3
       - uses: actions/setup-java@v3
         with:
-          java-version: 15
+          distribution: corretto
+          java-version: '11'
       - uses: burrunan/gradle-cache-action@v1.15
         with:
           remote-build-cache-proxy-enabled: false
