--- a/python/src/tox.ini
+++ b/python/src/tox.ini
@@ -23,7 +23,7 @@ changedir =
     test-instrumentation-aws-lambda: {toxinidir}/otel/tests
 
 commands_pre =
-    test: pip install "opentelemetry-test-utils @ {env:CORE_REPO}#egg=opentelemetry-test-utils&subdirectory=tests/opentelemetry-test-utils"
+    test: pip install "opentelemetry-test-utils[test] @ {env:CORE_REPO}\#egg=opentelemetry-test-utils&subdirectory=tests/opentelemetry-test-utils"
 
     aws-lambda: pip install opentelemetry-instrumentation-aws-lambda
 
