--- a/.github/workflows/ci-shellcheck.yml
+++ b/.github/workflows/ci-shellcheck.yml
@@ -9,7 +9,7 @@ jobs:
       - uses: actions/checkout@v3
 
       - name: Install shell check
-        run: apt update && apt install --assume-yes shellcheck
+        run: sudo apt update && sudo apt install --assume-yes shellcheck
 
       - name: Run shellcheck
         run: >-
