[chore] add install-tools make target
This will allow us to enable linting/fmt in the CI.

Signed-off-by: Alex Boten <aboten@lightstep.com>

--- a/collector/Makefile
+++ b/collector/Makefile
@@ -18,6 +18,8 @@ ALL_MODULES := $(shell find . -type f -name "go.mod" -exec dirname {} \; | sort 
 
 GOMODULES = $(ALL_MODULES) $(PWD)
 
+TOOLS_MOD_DIR := ./internal/tools
+
 # Define a delegation target for each module
 .PHONY: $(GOMODULES)
 $(GOMODULES):
@@ -59,3 +61,37 @@ gotidy:
 .PHONY: gotest
 gotest:
 	@$(MAKE) for-all-target TARGET="test"
+
+.PHONY: goporto
+goporto: install-tools
+	porto -w --include-internal ./
+
+.PHONY: golint
+golint: install-tools
+	@$(MAKE) for-all-target TARGET="lint"
+
+.PHONY: goimpi
+goimpi: install-tools
+	@$(MAKE) for-all-target TARGET="impi"
+
+.PHONY: gofmt
+gofmt:
+	@$(MAKE) for-all-target TARGET="fmt"
+
+.PHONY: install-tools
+install-tools:
+	cd $(TOOLS_MOD_DIR) && $(GOCMD) install github.com/client9/misspell/cmd/misspell
+	cd $(TOOLS_MOD_DIR) && $(GOCMD) install github.com/golangci/golangci-lint/cmd/golangci-lint
+	cd $(TOOLS_MOD_DIR) && $(GOCMD) install github.com/google/addlicense
+	cd $(TOOLS_MOD_DIR) && $(GOCMD) install github.com/ory/go-acc
+	cd $(TOOLS_MOD_DIR) && $(GOCMD) install github.com/pavius/impi/cmd/impi
+	cd $(TOOLS_MOD_DIR) && $(GOCMD) install github.com/tcnksm/ghr
+	cd $(TOOLS_MOD_DIR) && $(GOCMD) install github.com/wadey/gocovmerge
+	cd $(TOOLS_MOD_DIR) && $(GOCMD) install go.opentelemetry.io/build-tools/checkdoc
+	cd $(TOOLS_MOD_DIR) && $(GOCMD) install go.opentelemetry.io/build-tools/chloggen
+	cd $(TOOLS_MOD_DIR) && $(GOCMD) install go.opentelemetry.io/build-tools/semconvgen
+	cd $(TOOLS_MOD_DIR) && $(GOCMD) install golang.org/x/exp/cmd/apidiff
+	cd $(TOOLS_MOD_DIR) && $(GOCMD) install golang.org/x/tools/cmd/goimports
+	cd $(TOOLS_MOD_DIR) && $(GOCMD) install github.com/jcchavezs/porto/cmd/porto
+	cd $(TOOLS_MOD_DIR) && $(GOCMD) install go.opentelemetry.io/build-tools/multimod
+	cd $(TOOLS_MOD_DIR) && $(GOCMD) install go.opentelemetry.io/build-tools/crosslink
