Use localhost for default collector OTLP receiver configuration
Signed-off-by: Anthony J Mirabella <a9@aneurysm9.com>

--- a/collector/config.yaml
+++ b/collector/config.yaml
@@ -2,7 +2,9 @@ receivers:
   otlp:
     protocols:
       grpc:
+        endpoint: "localhost:4317"
       http:
+        endpoint: "localhost:4318"
 
 exporters:
   logging:
