--- a/collector/config.yaml
+++ b/collector/config.yaml
@@ -18,3 +18,6 @@ service:
     metrics:
       receivers: [otlp]
       exporters: [logging]
+  telemetry:
+    metrics:
+      address: localhost:8888
