Add python SDK version

--- a/python/src/otel/otel_sdk/requirements-nodeps.txt
+++ b/python/src/otel/otel_sdk/requirements-nodeps.txt
@@ -27,4 +27,5 @@ opentelemetry-instrumentation-sqlite3==0.37b0
 opentelemetry-instrumentation-starlette==0.37b0
 opentelemetry-instrumentation-tornado==0.37b0
 opentelemetry-instrumentation-wsgi==0.37b0
+opentelemetry-semantic-conventions==0.37b0
 
