--- a/python/src/tox.ini
+++ b/python/src/tox.ini
@@ -17,7 +17,7 @@ setenv =
     ; override CORE_REPO_SHA via env variable when testing other branches/commits than main
     ; i.e: CORE_REPO_SHA=<YOUR_COMMIT_SHA> tox -e test-instrumentation-aws-lambda
     CORE_REPO_SHA={env:CORE_REPO_SHA:main}
-    CORE_REPO="git+https://github.com/open-telemetry/opentelemetry-python.git@{env:CORE_REPO_SHA}"
+    CORE_REPO="git+https://github.com/open-telemetry/opentelemetry-python.git@12ea6e320344e8226562ace41c0042c6499d82fa"
 
 changedir =
     test-instrumentation-aws-lambda: {toxinidir}/otel/tests
