--- a/.github/workflows/ci-dotnet.yml
+++ b/.github/workflows/ci-dotnet.yml
@@ -24,5 +24,7 @@ jobs:
           dotnet-version: '6.0.x'
       - name: Build .NET layer for arm64
         run: GOARCH="arm64" ./build.sh
+        working-directory: "dotnet/sample-apps/aws-sdk/wrapper/SampleApps"
       - name: Build .NET layer for amd64
         run: GOARCH="amd64" ./build.sh
+        working-directory: "dotnet/sample-apps/aws-sdk/wrapper/SampleApps"
