--- a/nodejs/packages/layer/package.json
+++ b/nodejs/packages/layer/package.json
@@ -27,8 +27,8 @@
   },
   "dependencies": {
     "@opentelemetry/api": "^1.4.0",
-    "@opentelemetry/exporter-trace-otlp-proto": "^0.35.1",
     "@opentelemetry/exporter-metrics-otlp-proto": "^0.35.1",
+    "@opentelemetry/exporter-trace-otlp-proto": "^0.35.1",
     "@opentelemetry/instrumentation": "^0.35.1",
     "@opentelemetry/instrumentation-aws-lambda": "^0.35.0",
     "@opentelemetry/instrumentation-aws-sdk": "^0.34.0",
@@ -49,6 +49,7 @@
     "@opentelemetry/resource-detector-aws": "^1.2.2",
     "@opentelemetry/resources": "^1.9.1",
     "@opentelemetry/sdk-trace-base": "^1.9.1",
-    "@opentelemetry/sdk-trace-node": "^1.9.1"
+    "@opentelemetry/sdk-trace-node": "^1.9.1",
+    "opentelemetry-instrumentation-remix": "^0.3.0"
   }
 }
