[chore] Update CODEOWNERS
add @tsloughter, remove @wangzlei @NathanielRN

--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -1,4 +1,4 @@
 # https://docs.github.com/en/github/creating-cloning-and-archiving-repositories/about-code-owners
 
-* @Aneurysm9 @codeboten @wangzlei @NathanielRN
+* @Aneurysm9 @codeboten @tsloughter
 
