Migrate collector layer publishing to shared workflow
This needs testing, specifically around the part where I am defining `COLLECTOR_VERSION`.
Also changed tag layer pattern to remove `release/` prefix.

--- a/.github/workflows/layer-publish.yml
+++ b/.github/workflows/layer-publish.yml
@@ -62,7 +62,7 @@ jobs:
           echo GITHUB_ENV:
           cat $GITHUB_ENV
     
-          if [[ $GITHUB_REF_NAME != *$LAYER_VERSION ]]; then
+          if [[ $GITHUB_REF_NAME != */$LAYER_VERSION ]]; then
             echo "Tag $GITHUB_REF_NAME doesn't end with $LAYER_VERSION"
             exit 1
           fi
