--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -1,4 +1,3 @@
 # https://docs.github.com/en/github/creating-cloning-and-archiving-repositories/about-code-owners
 
-* @Aneurysm9 @codeboten @tsloughter
-
+* @Aneurysm9 @codeboten @tsloughter @tylerbenson
