[chore] use jq as the verison is emitted in json
Signed-off-by: Alex Boten <aboten@lightstep.com>

--- a/.github/workflows/release-layer-collector.yml
+++ b/.github/workflows/release-layer-collector.yml
@@ -38,7 +38,7 @@ jobs:
         shell: bash
         # `./collector -v` output is in the form `otelcol-contrib version 0.75.0`
         run: |
-          COLLECTOR_VERSION=$( ${{ github.workspace }}/collector/build/extensions/collector -v | sed 's/^.* version //')
+          COLLECTOR_VERSION=$( ${{ github.workspace }}/collector/build/extensions/collector -v | head -n 1 | jq -r .version)
           echo "COLLECTOR_VERSION=$COLLECTOR_VERSION" >> $GITHUB_OUTPUT
 
   publish-layer:
