--- a/.github/workflows/layer-publish.yml
+++ b/.github/workflows/layer-publish.yml
@@ -88,7 +88,8 @@ jobs:
 
       - name: Publish Lambda Layer
         run: |
-          pwd
+          ls -la
+          ls -la /home/runner/work/opentelemetry-lambda/opentelemetry-lambda
           LAYER_ARN=$(
             aws lambda publish-layer-version \
               --layer-name $LAYER_NAME \
